[project]
name = "uv-nlp-sentimentanalysis-ondrug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contractions>=0.1.73",
    "keras>=3.11.3",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.1",
]
